--- a/clipboard/package.json
+++ b/clipboard/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@supernotes/capacitor-clipboard",
-  "version": "6.0.2",
+  "version": "7.0.0",
   "description": "The Clipboard API enables copy and pasting to/from the system clipboard.",
   "main": "dist/plugin.cjs.js",
   "module": "dist/esm/index.js",
@@ -31,13 +31,13 @@
   ],
   "scripts": {
     "verify": "npm run verify:ios && npm run verify:android && npm run verify:web",
-    "verify:ios": "xcodebuild build -scheme SupernotesCapacitorClipboard -sdk iphonesimulator17.0 -destination 'OS=17.0,name=iPhone 15'",
+    "verify:ios": "xcodebuild build -scheme SupernotesCapacitorClipboard",
     "verify:android": "cd android && ./gradlew clean build test && cd ..",
     "verify:web": "npm run build",
     "lint": "npm run eslint && npm run prettier -- --check && npm run swiftlint -- lint",
     "fmt": "npm run eslint -- --fix && npm run prettier -- --write && npm run swiftlint -- --fix --format",
     "eslint": "eslint . --ext ts",
-    "prettier": "prettier \"**/*.{css,html,ts,js,java}\"",
+    "prettier": "prettier \"**/*.{css,html,ts,js,java}\" --plugin=prettier-plugin-java",
     "swiftlint": "node-swiftlint",
     "docgen": "docgen --api ClipboardPlugin --output-readme README.md --output-json dist/docs.json",
     "build": "npm run clean && npm run docgen && tsc && rollup -c rollup.config.mjs",
@@ -47,19 +47,19 @@
     "publish:cocoapod": "pod trunk push ./SupernotesCapacitorClipboard.podspec --allow-warnings"
   },
   "devDependencies": {
-    "@capacitor/android": "next",
-    "@capacitor/core": "next",
-    "@capacitor/docgen": "0.2.2",
-    "@capacitor/ios": "next",
+    "@capacitor/android": "^7.0.0",
+    "@capacitor/core": "^7.0.0",
+    "@capacitor/docgen": "^0.3.0",
+    "@capacitor/ios": "^7.0.0",
     "@ionic/eslint-config": "^0.4.0",
-    "@ionic/prettier-config": "~1.0.1",
-    "@ionic/swiftlint-config": "^1.1.2",
+    "@ionic/prettier-config": "^4.0.0",
+    "@ionic/swiftlint-config": "^2.0.0",
     "eslint": "^8.57.0",
-    "prettier": "~2.3.0",
-    "prettier-plugin-java": "~1.0.2",
+    "prettier": "^3.4.2",
+    "prettier-plugin-java": "^2.6.6",
     "rimraf": "^6.0.1",
-    "rollup": "^4.26.0",
-    "swiftlint": "^1.0.1",
+    "rollup": "^4.30.1",
+    "swiftlint": "^2.0.0",
     "typescript": "~4.1.5"
   },
   "peerDependencies": {
